Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86721

[Regression] Scene3D rendering with underlay composition on HighDpi display is incorrect.

XMLWordPrintable

    • 010d2456d8bc02d1c8ce8e0f16f0ecd59ac08803 (qt/qt3d/dev) a44069bc8d0b09cd5b47259e0094c1eed28eb15c (qt/qt3d/5.15)

      With HiDPI monitor 3D content is displayed at the wrong size (2x width and height).

      Please see the attached example. The rendered circle should be displayed in full, but instead only a one quarter is showing.

        1. qtbug_86721.zip
          3 kB
          Tuomas Vaarala
        For Gerrit Dashboard: QTBUG-86721
        # Subject Branch Project Status CR V

            andysh Andy Shaw
            tuomas.vaarala Tuomas Vaarala
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes