Only use surfaceSize if m_surfaceSize is not valid

This amends 2e3607aa120324f60832ca1cd42aaeaf22cc148d which made it
always use surfaceSize. But if m_surfaceSize->size() is valid then this
should be used as it will account for HighDPI setups.

Fixes: QTBUG-86721
Change-Id: I634b6c3257ac2dcf8042acbbeb999960f68bb266
Pick-to: 5.15 5.12
Reviewed-by: Mike Krus <mike.krus@kdab.com>